# GOL

./: .gitignore  CMakeLists.txt  README.md  main.cpp  quad_tree.cpp  quad_tree.h  quad_tree_config.h  quad_tree_node.cpp  quad_tree_node.h  quad_tree_tests.cpp  quad_tree_tests.h
cmake/modules/: FindGMP.cmake
